lx/test/fixtures/parser/invalid/return-not-at-end.lx
// Invalid: return not at end of block
{
  return 1
  let x = 2
}
